chore: resolving warnings - use of math.clamp and getFirst